force-app/main/default/objects/MassUpdateExecutionLine__c/MassUpdateExecutionLine__c.object-meta.xml
<CustomObject>
    <label>Mass Update Execution Line</label>
    <nameField>
        <displayFormat>EXL-{0000}</displayFormat>
        <label>Execution Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Update Execution Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>