force-app/main/default/objects/MassUpdateExecutionLine__c/fields/CreatedQuote__c.field-meta.xml
<CustomField>
    <fullName>CreatedQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Mass Update Execution Lines</relationshipLabel>
    <relationshipName>MassUpdateExecutionLines</relationshipName>
    <type>Lookup</type>
</CustomField>