force-app/main/default/objects/MassUpdateExecutionLine__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ContractDateUpdate</fullName>
            </value>
            <value>
                <fullName>QuoteUpdate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>