force-app/main/default/objects/MassUpdateExecutionLine__c/fields/FinishedSteps__c.field-meta.xml
<CustomField>
    <fullName>FinishedSteps__c</fullName>
    <label>FinishedSteps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generate Amendments</fullName>
            </value>
            <value>
                <fullName>Check Eligibility</fullName>
            </value>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Generate Contracts</fullName>
            </value>
            <value>
                <fullName>Update Quotes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>