force-app/main/default/objects/MassUpdateExecutionLine__c/fields/MassUpdateExecution__c.field-meta.xml
<CustomField>
    <fullName>MassUpdateExecution__c</fullName>
    <label>Mass Update Execution</label>
    <referenceTo>MassUpdateExecution__c</referenceTo>
    <relationshipLabel>Mass Update Execution Lines</relationshipLabel>
    <relationshipName>ExecutionLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>