force-app/main/default/objects/MassUpdateExecutionLine__c/fields/NewValues__c.field-meta.xml
<CustomField>
    <fullName>NewValues__c</fullName>
    <label>New Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>