force-app/main/default/objects/MassUpdateExecutionLine__c/fields/OldValues__c.field-meta.xml
<CustomField>
    <fullName>OldValues__c</fullName>
    <label>Old Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>