force-app/main/default/objects/MassUpdateExecutionLine__c/fields/QueryFilters__c.field-meta.xml
<CustomField>
    <fullName>QueryFilters__c</fullName>
    <label>Query Filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>