force-app/main/default/objects/MassUpdateExecutionLine__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check Eligibility</fullName>
            </value>
            <value>
                <fullName>Generate Amendments</fullName>
            </value>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Generate Contracts</fullName>
            </value>
            <value>
                <fullName>Update Quotes</fullName>
            </value>
            <value>
                <fullName>Check Elegibility</fullName>
                <isActive>false</isActive>
                <label>Check Elegibility</label>
            </value>
            <value>
                <fullName>Generate Contract</fullName>
                <isActive>false</isActive>
                <label>Generate Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>